<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimens_10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_20"
                    tools:text="@string/sample_title" />

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="@dimen/poster_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitle"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dimens_16"
                    android:adjustViewBounds="true"
                    tools:src="@drawable/sample_image" />


                <TextView
                    android:id="@+id/label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitle"
                    android:layout_toEndOf="@+id/ivPoster"
                    android:layout_toRightOf="@+id/ivPoster"
                    android:text="@string/release_date"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label1"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:layout_toEndOf="@+id/ivPoster"
                    android:layout_toRightOf="@+id/ivPoster"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_13"
                    tools:text="@string/sample_date" />

                <TextView
                    android:id="@+id/label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDate"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:layout_toEndOf="@+id/ivPoster"
                    android:layout_toRightOf="@+id/ivPoster"
                    android:text="@string/rating"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/tvRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label2"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:layout_toEndOf="@+id/ivPoster"
                    android:layout_toRightOf="@+id/ivPoster"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_13"
                    tools:text="@string/sample_rating" />

                <TextView
                    android:id="@+id/label3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvRate"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:layout_toEndOf="@+id/ivPoster"
                    android:layout_toRightOf="@+id/ivPoster"
                    android:text="@string/popularity"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/tvPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label3"
                    android:layout_marginTop="@dimen/dimens_4"
                    android:layout_toEndOf="@+id/ivPoster"
                    android:layout_toRightOf="@+id/ivPoster"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_13"
                    tools:text="@string/sample_popularity" />

            </RelativeLayout>

            <TextView
                android:id="@+id/label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8"
                android:text="@string/overviews"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <TextView
            android:id="@+id/label5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_8"
            android:text="@string/trailers"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_8" />

        <TextView
            android:id="@+id/label6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_8"
            android:text="@string/reviews"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_8"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>